# SlicerDB

./: .dockerignore  .gitignore  CHANGELOG.md  NOTICE  PLAN.md  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 05ae499e7e18_add_app_settings_singleton_table.py  8da961725bbd_initial_schema.py  9a217fd8d3e2_add_spoolman_public_url_to_app_settings.py  fd7f67c58b1e_add_build_plate_table_and_fk_on_print_.py
app/: __init__.py  config.py  db.py  main.py  templating.py
app/models/: __init__.py  app_settings.py  base.py  build_plate.py  filament.py  nozzle.py  printer.py  profile.py  slicer.py
app/routers/: __init__.py  app_settings.py  buildplates.py  filaments.py  nozzles.py  printers.py  profiles.py  slicers.py
app/services/: __init__.py  integrity.py  runtime_settings.py  slicer_parsers.py  spoolman.py
app/static/css/: input.css
app/templates/: _macros.html  base.html  index.html
app/templates/buildplates/: _list.html  _row.html  _row_edit.html  index.html
app/templates/filaments/: _list.html  _row.html  _row_edit.html  _spoolman_panel.html  index.html
app/templates/nozzles/: _list.html  _row.html  _row_edit.html  index.html
app/templates/printers/: _list.html  _row.html  _row_edit.html  index.html
app/templates/profiles/: _list.html  _row.html  _row_edit.html  detail.html  index.html
app/templates/settings/: index.html
app/templates/slicers/: _list.html  _row.html  _row_edit.html  index.html
branding/: preview.html
docker/: Dockerfile  compose.yml
scripts/: build_css.sh  dev.sh
tests/: conftest.py  test_buildplates.py  test_crud.py  test_integrity.py  test_parsers.py  test_profiles.py  test_settings.py  test_smoke.py  test_spoolman.py
