[project]
name = "slicerdb"
version = "1.0.0"
description = "Slicekeeper — Die Datenbank für deine Slicer Profile (versioned 3D printer slicer settings)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "LennyK" }]
maintainers = [{ name = "LennyK" }]
keywords = ["3d-printing", "slicer", "orcaslicer", "anycubic", "spoolman", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]

dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlmodel>=0.0.27",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[project.urls]
Repository = "https://github.com/ppabst/SlicerDB"
Author = "https://github.com/ppabst"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.10.0",
    "mypy>=1.14.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
# B008: FastAPI's `Depends()/File()/Form()` in defaults is idiomatic.
# RUF002: Unicode `×` is intentional in German UI strings.
ignore = ["E501", "B008", "RUF001", "RUF002"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
